Detail pagina pakket

--- a/FoodWasteMVC/Views/Home/Index.cshtml
+++ b/FoodWasteMVC/Views/Home/Index.cshtml
@@ -26,6 +26,9 @@
                             <li>
                                 <a  asp-area="" asp-controller="Product" asp-action="Index">Onze Producten</a>
                             </li>
+                <li>
+                    <a asp-area="" asp-controller="Pakket" asp-action="Index">Onze Pakketen</a>
+                </li>
                 @if (!User.Identity.IsAuthenticated)
                 {
 
