--- a/FoodWasteMVC/Views/Pakket/Detail.cshtml
+++ b/FoodWasteMVC/Views/Pakket/Detail.cshtml
@@ -1,1 +1,75 @@
-﻿
+﻿@using FoodWaste.Application.ViewModels
+@using FoodWaste.Domain
+@model CreatePakketViewModel
+
+@{
+}
+<!-- Page Content -->
+<div class="container" style="margin-top:150px">
+
+    <!-- Portfolio Item Heading -->
+    <h1 class="my-4">
+        @Model.BeschrijvendeNaam
+        @if (@Model.Meerderjarig)
+        {
+            <small>(Meerder jarig)</small>
+        }
+    </h1>
+
+    <!-- Portfolio Item Row -->
+    <div class="row">
+
+        <div class="col-md-8">
+            <img class="img-fluid" src="" width="500px" alt="">
+        </div>
+
+        <div class="col-md-4">
+            <h3 class="my-3">@Model.BeschrijvendeNaam Beschrijving</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+            <h3 class="my-3">@Model.BeschrijvendeNaam Producten</h3>
+            <ul>
+                @foreach (var item in Model.ProductCollectie)
+                {
+                    <li>@item.BeschrijvendeNaam</li>
+
+                }
+              
+            </ul>
+        </div>
+
+    </div>
+    <!-- /.row -->
+    <!-- Related Projects Row -->
+    <h3 class="my-4">Gerelateerd</h3>
+
+    <div class="row">
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="https://via.placeholder.com/500x300" alt="">
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="https://via.placeholder.com/500x300" alt="">
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="https://via.placeholder.com/500x300" alt="">
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="https://via.placeholder.com/500x300" alt="">
+            </a>
+        </div>
+
+    </div>
+    <!-- /.row -->
+
+</div>
+<!-- /.container -->
