--- a/FoodWasteMVC/Views/Shared/_Layout.cshtml
+++ b/FoodWasteMVC/Views/Shared/_Layout.cshtml
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="~/FoodWasteMVC.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <script src="~/js/chosen.jquery.min.js"></script>
+    <link href="~/chosen/chosen.min.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -44,14 +45,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - FoodWasteMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+   
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    <script src="~/js/chosen.jquery.min.js"></script>
 </body>
 </html>
