--- a/FoodWasteMVC/Views/Pakket/Detail.cshtml
+++ b/FoodWasteMVC/Views/Pakket/Detail.cshtml
@@ -12,7 +12,7 @@
         @Model.BeschrijvendeNaam
         @if (@Model.Meerderjarig)
         {
-            <small>(Meerder jarig)</small>
+            <small>(+18)</small>
         }
     </h1>
 
