--- a/FoodWasteMVC/Views/Pakket/Index.cshtml
+++ b/FoodWasteMVC/Views/Pakket/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
 }
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" />
 <main role="main">
 
     <section class="jumbotron text-center">
@@ -14,15 +15,71 @@
             </p>
         </div>
     </section>
-
+    @if (TempData["Error"] != null)
+    {
+        <div id="third" class="col-md-12 alert alert-danger alert-dismissible fade show" >
+            <span>@TempData["Error"] </span>
+            <button id="toggle" class="close" data-dismiss="alert">&times;
+            </button>
+        </div>
+    }
     <div class="album py-5 bg-light">
         <div class="container">
+            <i class="@ViewData["SortIconDate"]" arial-hidden="true"></i>
+            <a asp-action="Index" asp-route-sortExpression="@ViewData["SortParamDate"]" asp-route-sortKantine="@ViewData["SortParamKantine"]">Datum</a>
+            <a asp-action="Index" asp-route-sortExpression="date" asp-route-sortKantine="LA">LA</a>
+            <a asp-action="Index" asp-route-sortExpression="date" asp-route-sortKantine="LX">LX</a>
+            <a asp-action="Index" asp-route-sortExpression="date" asp-route-sortKantine="HL">HL</a>
+            <a asp-action="Index" asp-route-sortExpression="date" asp-route-sortKantine="LD">LD</a>
+
+            <a asp-action="Index" asp-route-sortExpression="date" asp-route-sortKantine="">ALL</a>
 
             <div class="row">
                 @foreach (var item in Model)
                 {
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
+                    
+                        @if (item.StudentenIds != null)
+                        {
+                            List<int> studentIds = item.StudentenIds.Split(',').Select(int.Parse).ToList();
+                            for (int i = 0; i < studentIds.Count; i++)
+                            {
+                                if (studentIds[i].ToString().Equals(ViewData["Student"].ToString()))
+                                {
+                                    ViewData["Reserved"] = true;
+                                }
+                                else
+                                {
+                                    ViewData["Reserved"] = false;
+                                }
+                            }
+                        }
+                    @if (item.Meerderjarig && !(ViewData["Meerderjarig"].ToString().Equals("+18")))
+                    {
+                        <div class="col-md-4">
+                            <div class="card text-white bg-danger mb-4 box-shadow">
+                                <img class="card-img-top" src="https://t3.ftcdn.net/jpg/01/32/19/04/360_F_132190437_G52JKWshlBzSP4c9TDfDDVQTTRPspWCw.jpg" width="100%" height="225" alt="Card image cap">
+                                <div class="card-body" >
+                                    <p class="card-text">@item.BeschrijvendeNaam</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <a type="btn btn-succes" asp-controller="Pakket" asp-action="Detail" asp-route-id="@item.Id"
+                                       class="btn btn-sm btn-light">View</a>
+                                        </div>
+
+                                        <small class="text-muted" style="color: white !important; ">@item.Kantine</small>
+
+
+
+
+
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }else{
+                        <div class="col-md-4">
+                            <div class="card mb-4 box-shadow">
                             <img class="card-img-top" src="https://cdn.dribbble.com/users/59947/screenshots/16870381/media/b02407056dbebb961ee73f2e5ec3eddf.jpg?compress=1&resize=400x300" width="100%" height="225" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text">@item.BeschrijvendeNaam</p>
@@ -30,14 +87,30 @@
                                     <div class="btn-group">
                                         <a type="btn btn-succes" asp-controller="Pakket" asp-action="Detail" asp-route-id="@item.Id"
                                        class="btn btn-sm btn-outline-secondary">View</a>
-
-                                        <a class="btn btn-sm btn-outline-secondary" asp-controller="Pakket" asp-action="Reserve" asp-route-id="@item.Id">Reserveren</a>
-
-                                        @if (User.Identity.IsAuthenticated && User.IsInRole("student"))
+                                        @if (item.StudentenIds != null)
                                         {
-                                            <a class="btn btn-sm btn-outline-secondary" asp-controller="Product" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                                            <a class="btn btn-sm btn-outline-secondary" asp-controller="Product" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                            List<int> studentIds = item.StudentenIds.Split(',').Select(int.Parse).ToList();
+                                            for (int i = 0; i < studentIds.Count; i++)
+                                            {
+                                                if (studentIds[i].ToString().Equals(ViewData["Student"].ToString()))
+                                                {
+                                                    <a style="pointer-events: none; cursor: default;" class="btn btn-sm btn-success" asp-controller="Pakket" asp-action="Reserve" asp-route-id="@item.Id">Gereserveerd</a>
+                                                }
+                                              
+                                            }
                                         }
+                                        else
+                                        {
+                                            <a class="btn btn-sm btn-outline-secondary" asp-controller="Pakket" asp-action="Reserve" asp-route-id="@item.Id">Reserveren</a>
+                                        }
+
+                                        <a class="btn btn-sm btn-outline-secondary" asp-controller="Pakket" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                                        <a class="btn btn-sm btn-outline-secondary" asp-controller="Pakket" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+
+                                     @* @if (User.Identity.IsAuthenticated && User.IsInRole("student"))
+                                        {
+                                            <a class="btn btn-sm btn-outline-secondary" asp-controller="Product" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                        }*@
                                     </div>
                                     
                                         <small class="text-muted" style="color: forestgreen;">@item.Kantine</small>
@@ -51,9 +124,17 @@
                             </div>
                         </div>
                     </div>
+                    }
                 }
             </div>
         </div>
     </div>
 
 </main>
+<script>
+    const targetDiv = document.getElementById("third");
+    const btn = document.getElementById("toggle");
+    btn.onclick = function () {
+        targetDiv.style.display = "none";
+    }
+</script>
