--- a/FoodWasteMVC/Views/Product/Create.cshtml
+++ b/FoodWasteMVC/Views/Product/Create.cshtml
@@ -21,3 +21,7 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+@section Scripts{
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
