--- a/FoodWasteMVC/Views/Pakket/Reserve.cshtml
+++ b/FoodWasteMVC/Views/Pakket/Reserve.cshtml
@@ -3,7 +3,7 @@
 @using FoodWaste.Domain.Enums
 @model CreatePakketViewModel
 <body onload="setTimeout(function() { document.myform.submit() }, 1500)">
-    <img src="https://thumbs.gfycat.com/AcidicUnfoldedGoldenretriever-max-1mb.gif" style=" display: block;margin-left: auto;margin-right: auto;width: 50%;" />
+    <img src="https://thumbs.gfycat.com/AcidicUnfoldedGoldenretriever-max-1mb.gif" style=" display: block;margin-left: auto;margin-right: auto;width: 20%" />
     <h1 style=" display: block;margin-left: auto;margin-right: auto;width: 50%;">Reserveren...</h1>
 <form method="post" asp-action="Reserve" name="myform" style="visibility:hidden">
     <div class="form-group">
