--- a/FoodWasteMVC/Views/Shared/_Layout.cshtml
+++ b/FoodWasteMVC/Views/Shared/_Layout.cshtml
@@ -14,9 +14,17 @@
     <link rel="stylesheet" href="css/bootnavbar.css" />
     
     <link href="~/chosen/chosen.min.css" rel="stylesheet" />
+
+
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/FoodWasteMVC.styles.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
-    <header>
+    @*<header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FoodWasteMVC</a>
@@ -43,16 +51,95 @@
     <div class="container">
         <main role="main" class="pb-3">
             <div class="col-md-8 offset-md-2">
+*@
+
+        <nav>
+            <a asp-area="" asp-controller="Home" asp-action="Index" class="logo">Avans Foodie</a>
+            <ul>
+                <li>
+                    <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                </li>
+
+                @if (!User.Identity.IsAuthenticated)
+                {
+
+                    <li>
+                        <a asp-area="" asp-controller="Account" asp-action="Index">Register</a>
+                    </li>
+                    <li>
+                        <a asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                    </li>
+                }
+                else
+                {
+                    <li>
+                        <a asp-area="" asp-controller="Product" asp-action="Index">Onze Producten</a>
+                    </li>
+                    <li>
+                        <a asp-area="" asp-controller="Pakket" asp-action="Index">Onze Pakketen</a>
+                    </li>
+
+                    @if (User.IsInRole("kantineMedewerker"))
+                    {
+
+                        <li>
+                            <a asp-area="" asp-controller="Account" asp-action="Logout">
+                                <button class="btn btnbtn-outline-danger">Logout</button>
+                            </a>
+                        </li>
+                        <li>
+                            | Medewerker
+                        </li>
+                    }
+                    else
+                    {
+                        <li>
+                            <a asp-area="" asp-controller="Reserveringen" asp-action="Index">
+                                Mijn Reserveringen
+                            </a>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Account" asp-action="Logout">
+                                <button class="btn btnbtn-outline-danger">Logout</button>
+                            </a>
+                        </li>
+                        <li>
+                            | Student
+                        </li>
+                    }
+                }
+            </ul>
+        </nav>
+                <!-- Succes Dialog Start -->
+                <div id="myModalSucces" class="modal fade text-width: 30%;" role="dialog">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h2>Information</h2>
+                    <button type="button" class="close" id="closemodal" data-dismiss="modal">&times;</button>
+                            </div>
+                            <div id="MyModalSuccesAlertBody" class="modal-body alert alert-success">
+                                this is a modal body
+                            </div>
+                            
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Dialog end -->
+
                 @RenderBody()
-            </div>
+      @*      </div>
         </main>
     </div>
-
+*@
    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
     <script src="~/js/chosen.jquery.min.js"></script>
+        
 </body>
 </html>
