--- a/FoodWasteMVC/Views/Pakket/Delete.cshtml
+++ b/FoodWasteMVC/Views/Pakket/Delete.cshtml
@@ -2,7 +2,8 @@
 @using FoodWaste.Domain.Enums
 
 @model Pakket
-<h1>Are you sure you want to delete this pakket?</h1>
+<div style="padding-left:1000px;">
+<h4>Are you sure you want to delete this pakket?</h4>
 <form method="post" asp-action="Delete" enctype="multipart/form-data">
     <div class="form-group">
         <label asp-for="BeschrijvendeNaam">Beschrijvende Naam</label>
@@ -37,7 +38,7 @@
     <div class="form-check">
         <label class="form-check-label" asp-for="Meerderjarig">Meerderjarig?</label>
 
-        <input class="form-check-input" asp-for="Meerderjarig" readonly>
+        <input class="form-check-input" asp-for="Meerderjarig" disabled="disabled">
         <span asp-validation-for="Meerderjarig" class="text-danger"></span>
 
     </div>
@@ -65,7 +66,8 @@
     <form action="Delete" method="post">
         <input type="hidden" asp-for="Id"/>
 
-        <input type="submit" value="Confirm" class="btn btn-danger btn-lg float-right mt-3" />
+        <input type="submit" value="Confirm" class="btn btn-danger btn-lg mt-3" />
     </form>
 </div>
 
+    </div>
