--- a/FoodWasteMVC/Views/Pakket/Index.cshtml
+++ b/FoodWasteMVC/Views/Pakket/Index.cshtml
@@ -9,10 +9,11 @@
     <section class="jumbotron text-center">
         <div class="container">
             <h1 class="jumbotron-heading">Onze Pakketen</h1>
-            <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+            @if(User.IsInRole("kantineMedewerker")){
             <p>
                 <a asp-controller="Pakket" asp-action="Create">Pakket Toevoegen</a>
             </p>
+            }
         </div>
     </section>
     @if (TempData["Error"] != null)
@@ -35,6 +36,7 @@
             <a asp-action="Index" asp-route-sortExpression="date" asp-route-sortKantine="">ALL</a>
 
             <div class="row">
+                @if(User.IsInRole("student")){
                 @foreach (var item in Model)
                 {
                     
@@ -55,7 +57,7 @@
                         }
                     @if (item.Meerderjarig && !(ViewData["Meerderjarig"].ToString().Equals("+18")))
                     {
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="card text-white bg-danger mb-4 box-shadow">
                                 <img class="card-img-top" src="https://t3.ftcdn.net/jpg/01/32/19/04/360_F_132190437_G52JKWshlBzSP4c9TDfDDVQTTRPspWCw.jpg" width="100%" height="225" alt="Card image cap">
                                 <div class="card-body" >
@@ -78,7 +80,7 @@
                             </div>
                         </div>
                     }else{
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="card mb-4 box-shadow">
                             <img class="card-img-top" src="https://cdn.dribbble.com/users/59947/screenshots/16870381/media/b02407056dbebb961ee73f2e5ec3eddf.jpg?compress=1&resize=400x300" width="100%" height="225" alt="Card image cap">
                             <div class="card-body">
@@ -96,7 +98,10 @@
                                                 {
                                                     <a style="pointer-events: none; cursor: default;" class="btn btn-sm btn-success" asp-controller="Pakket" asp-action="Reserve" asp-route-id="@item.Id">Gereserveerd</a>
                                                 }
-                                              
+                                                        else
+                                                        {
+                                                            <a class="btn btn-sm btn-outline-danger" asp-controller="Pakket" asp-action="Reserve" asp-route-id="@item.Id">Reserveren</a>
+                                                        }
                                             }
                                         }
                                         else
@@ -104,17 +109,11 @@
                                             <a class="btn btn-sm btn-outline-secondary" asp-controller="Pakket" asp-action="Reserve" asp-route-id="@item.Id">Reserveren</a>
                                         }
 
-                                        <a class="btn btn-sm btn-outline-secondary" asp-controller="Pakket" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                                        <a class="btn btn-sm btn-outline-secondary" asp-controller="Pakket" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
 
-                                     @* @if (User.Identity.IsAuthenticated && User.IsInRole("student"))
-                                        {
-                                            <a class="btn btn-sm btn-outline-secondary" asp-controller="Product" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                                        }*@
                                     </div>
-                                    
-                                        <small class="text-muted" style="color: forestgreen;">@item.Kantine</small>
-                                    
+
+                                            <small class="text-muted" style="color: forestgreen;">@item.Kantine</small>
+
 
 
 
@@ -125,7 +124,44 @@
                         </div>
                     </div>
                     }
+                    }
+                }else{
+                    @foreach (var item in Model)
+                    {
+
+
+                        <div class="col-md-3">
+                            <div class="card mb-4 box-shadow">
+                                <img class="card-img-top" src="https://cdn.dribbble.com/users/59947/screenshots/16870381/media/b02407056dbebb961ee73f2e5ec3eddf.jpg?compress=1&resize=400x300" width="100%" height="225" alt="Card image cap">
+                                <div class="card-body">
+                                    <p class="card-text">@item.BeschrijvendeNaam</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <a type="btn btn-succes" asp-controller="Pakket" asp-action="Detail" asp-route-id="@item.Id"
+                                       class="btn btn-sm btn-outline-secondary">View</a>
+                                            @if (User.Identity.IsAuthenticated && User.IsInRole("kantineMedewerker"))
+                                            {
+
+                                                <a class="btn btn-sm btn-outline-secondary" asp-controller="Pakket" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                                                <a class="btn btn-sm btn-outline-secondary" asp-controller="Pakket" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                            }
+                                       </div>
+
+                                        <small class="text-muted"  >@item.Kantine</small>
+
+
+                                       
+
+
+
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
                 }
+            
             </div>
         </div>
     </div>
