--- a/FoodWasteMVC/Views/Product/Edit.cshtml
+++ b/FoodWasteMVC/Views/Product/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@using FoodWasteMVC.ViewModels
 @model EditProductViewModel
 
+<div class="center">
 <form method="post" asp-action="Edit">
     <div class="form-group">
         <label asp-for="BeschrijvendeNaam">Beschrijvende Naam</label>
@@ -20,4 +21,6 @@
 
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
+    
 </form>
+</div>
