--- a/FoodWasteMVC/wwwroot/css/site.css
+++ b/FoodWasteMVC/wwwroot/css/site.css
@@ -167,3 +167,10 @@ form {
         margin-left: 105px;
         margin-top: 200px;
     }
+
+.center {
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    
+}
