--- a/FoodWasteMVC/Views/Home/Index.cshtml
+++ b/FoodWasteMVC/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
         <div class="right-sidebar"></div>
         <div class="content">
             <div class="left">
-                <h2>YUMMY!</h2>
+                <h2>YUMMY!!</h2>
                 <h3>Ontdek Ons ​​Restaurant<br> & Heerlijk eten</h3>
             </div>
             <div class="right">
@@ -11,23 +11,7 @@
 *@                <img src="~/pngegg (2).png" class="plate">
             </div>
         </div>
-                </div>
-               @* <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " asp-area="" asp-controller="Transactions" asp-action="Index">Transactions</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>*@
-     @*       </div>
-        </nav>
-    </header>*@
+     
     @section Scripts{
         <script type="text/javascript">
             function openSuccessModal(strMessage) {
