--- a/FoodWasteMVC/Views/Home/Index.cshtml
+++ b/FoodWasteMVC/Views/Home/Index.cshtml
@@ -7,8 +7,7 @@
                 <h3>Ontdek Ons ​​Restaurant<br> & Heerlijk eten</h3>
             </div>
             <div class="right">
-@*                <img src="~/veg.png" class="veg">
-*@                <img src="~/pngegg (2).png" class="plate">
+               <img src="~/pngegg (2).png" class="plate">
             </div>
         </div>
      
