--- a/FoodWasteMVC/Views/Pakket/Index.cshtml
+++ b/FoodWasteMVC/Views/Pakket/Index.cshtml
@@ -29,7 +29,7 @@
 
         <div class="container">
             <i class="@ViewData["SortIconDate"]" arial-hidden="true"></i>
-            <a asp-action="Index" asp-route-sortExpression="@ViewData["SortParamDate"]" asp-route-sortKantine="@ViewData["SortParamKantine"]">Datum</a>
+            <a asp-action="Index" asp-route-sortExpression="@ViewData["SortParamDate"]" asp-route-sortStad="@ViewData["SortParamStad"]" asp-route-sortMaaltijd="@ViewData["SortParamMaaltijd"]" asp-route-sortKantine="@ViewData["SortParamKantine"]">Datum</a>
 
             <div class="dropdownMe">
                 <div class="select">
